use root for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,8 @@ jobs:
     - name: Migrate Database
       env:
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
-        DB_CONNECTION: mysql
         DB_DATABASE: test
-        DB_USERNAME: user
+        DB_USERNAME: root
         DB_PASSWORD: password
       run: php artisan migrate --no-interaction -vvv
     - name: Execute code style check via php-cs-fixer
@@ -76,9 +75,8 @@ jobs:
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
-        DB_CONNECTION: mysql
         DB_DATABASE: test
-        DB_USERNAME: user
+        DB_USERNAME: root
         DB_PASSWORD: password
         TESTING_BBB: ${{ secrets.TESTING_BBB }}
       run: |
