Move .env vars to application settings, adjust tests, update .env files

--- a/.env.ci
+++ b/.env.ci
@@ -4,8 +4,6 @@ APP_KEY=
 APP_DEBUG=true
 # API Server URL
 APP_URL=http://localhost
-# URL of the frontend, usually the same as APP_URL
-MIX_FRONTEND_BASE_URL="${APP_URL}"
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -64,9 +62,12 @@ MIX_AVAILABLE_LOCALES=en,de
 # Default language
 MIX_DEFAULT_LOCALE=en
 # Maximum length of the room welcome message
-MIX_WELCOME_MESSAGE_LIMIT=500
+WELCOME_MESSAGE_LIMIT=500
 # Maximum length of the room name
-MIX_ROOM_NAME_LIMIT=50
+ROOM_NAME_LIMIT=50
+# Base time in seconds to automatically reload room page to detect change in room status and settings
+# the value is slightly randomized to prevent simultaneous refreshes
+ROOM_REFRESH_RATE=5
 # Default logo of the application
 DEFAULT_LOGO=/images/logo.svg
 # Default favicon of the application
