--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
             - name: Execute frontend code style check via eslint
               run: npm run lint
             - name: Execute frontend tests
-              run: npm run jest --coverage --max-workers=2
+              run: npm run cover -- --max-workers=2
             - name: Upload npm logs
               uses: actions/upload-artifact@v2
               if: failure()
