--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "test": "jest",
         "lint": "eslint --ext .js,.vue .",
         "fix-cs": "eslint --ext .js,.vue . --fix",
-        "cover": "jest --coverage",
-        "ci": "npm run lint && npm run cover"
+        "cover": "jest --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.16.10",
