Refactor tests from mocha to jest (#240)
* Add jest

* Transform tests

* Replace mocha with jest, refactor tests

* Cleanup

* Refactor tests

* Add test helper functions, refactor tests

* Refactor tests

* Refactor tests

* Fix cs

* Fix cs

* Refactor forgot and reset password tests

* refactor tests

* refactor test

* refactor tests

* Refactor room view test

* fix cs

* fix cs

* refactor tests

* Remove wrong test

* refactor tests

* Update changelog, resolve git comment

* Try to improve performance on github actions

https://jestjs.io/docs/troubleshooting#tests-are-extremely-slow-on-docker-andor-continuous-integration-ci-server

* Fix github tests

* Cleanup code, remove unused npm dependencies

* Remove unused npm dependencies

* Cleanup tests, fix cs

* Update testing section in docs to reflect new testing framework

Co-authored-by: CodeRibs <66089869+CodeRibs@users.noreply.github.com>

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,12 @@
 {
     "env": {
-        "testing": {
-            "plugins": ["rewire", "istanbul", "@babel/plugin-proposal-class-properties"],
+        "test": {
+            "presets": [
+                [
+                    "@babel/preset-env"
+                ]
+            ],
+            "plugins": ["rewire"],
             "retainLines": true
         }
     }
