--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "prod": "npm run production",
         "production": "mix --production",
-        "test": "cross-env NODE_ENV=testing mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
+        "test": "jest",
         "lint": "eslint --ext .js,.vue .",
         "fix-cs": "eslint --ext .js,.vue . --fix",
-        "cover": "cross-env NODE_ENV=testing nyc --reporter=lcov --reporter=text npm run test",
-        "ci": "npm run lint && npm run cover"
+        "cover": "jest --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.16.10",
@@ -19,42 +18,37 @@
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^0.15.0",
         "@vue/test-utils": "^1.3.0",
+        "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
         "axios": "^0.21.2",
-        "babel-plugin-istanbul": "^6.1.1",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.6.1",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
         "canvas": "^2.9.0",
-        "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-mocha": "^7.0.1",
+        "eslint-plugin-jest": "^26.5.3",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
         "eslint-plugin-standard": "^4.1.0",
         "eslint-plugin-vue": "^7.0.0",
-        "expect": "^26.6.2",
         "glob": "^7.2.0",
-        "jquery": "^3.6.0",
+        "jest": "^28.1.2",
+        "jest-config": "^28.1.2",
+        "jest-transform-stub": "^2.0.0",
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
-        "mocha": "^9.0.0",
-        "mochapack": "^2.1.4",
         "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
-        "nyc": "^15.1.0",
         "popper.js": "^1.12",
-        "pre-commit": "^1.1.3",
-        "prettier": "^2.5.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.0",
         "sass-loader": "^8.0.0",
-        "sinon": "^9.2.4",
         "vue": "^2.6.14",
         "vue-axe": "^2.4.4",
         "vue-loader": "^15.9.7",
@@ -62,14 +56,10 @@
         "webpack": "^5.68.0"
     },
     "dependencies": {
-        "@simonwep/pickr": "^1.5.1",
         "@smartweb/vue-flash-message": "^0.6.4",
-        "array-flat-polyfill": "^1.0.1",
         "awesome-mask": "^1.1.1",
-        "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.4",
-        "es6-promise": "^4.2.8",
         "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
         "vue-cropperjs": "^4.2.0",
