--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,8 @@ AUTH_LOG_LDAP_ROLES=false
 MIX_AVAILABLE_LOCALES=en,de
 # Default language
 MIX_DEFAULT_LOCALE=en
+# Theme (resources/sass/theme/)
+MIX_THEME=default
 # Maximum length of the room welcome message
 WELCOME_MESSAGE_LIMIT=500
 # Maximum length of the room name
