--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "webpack": "^5.68.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.2",
         "@smartweb/vue-flash-message": "^0.6.4",
         "awesome-mask": "^1.1.1",
         "bootstrap-vue": "^2.15.0",
