Bugfix color override

--- a/.env.ci
+++ b/.env.ci
@@ -69,8 +69,8 @@ MIX_HISTORY_VOICES_COLOR='#2980b9'
 MIX_HISTORY_VIDEOS_COLOR='#27ae60'
 # Colors for color pickers (room type and application banner)
 MIX_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-MIX_HISTORY_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-MIX_HISTORY_ROOM_TYPE_COLORS='["#ffffff", "#000000"]'
+MIX_BANNER_BACKGROUND_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
+MIX_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
 # Maximum length of the room welcome message
 WELCOME_MESSAGE_LIMIT=500
 # Maximum length of the room name
