--- a/.env.example
+++ b/.env.example
@@ -34,14 +34,14 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 # LDAP config
 LDAP_ENABLED=false
-LDAP_HOST=127.0.0.1
+LDAP_HOST=openldap
 # For anonymous bind keep LDAP_USERNAME and LDAP_PASSWORD empty
-LDAP_USERNAME="cn=user,dc=local,dc=om"
-LDAP_PASSWORD="secret"
+LDAP_USERNAME="cn=readonly,dc=university,dc=org"
+LDAP_PASSWORD="readonly"
 LDAP_PORT=389
-LDAP_BASE_DN="dc=local,dc=com"
+LDAP_BASE_DN="ou=people,dc=university,dc=org"
 LDAP_TIMEOUT=5
-LDAP_SSL=true
+LDAP_SSL=false
 LDAP_TLS=false
 # LDAP logging debugging only
 LDAP_LOGGING=false
