--- a/.env.example
+++ b/.env.example
@@ -47,9 +47,9 @@ LDAP_TLS=false
 LDAP_LOGGING=false
 # LDAP role mapping, to disable keep LDAP_ROLE_ATTRIBUTE empty
 # Attribute with the users role, can be a multi value attribute
-LDAP_ROLE_ATTRIBUTE=userclass
-# Map the attribute to the name of a local role, defined as array, ldap role is key, pilos role is value
-LDAP_ROLE_MAP=A=admin,U=user
+LDAP_ROLE_ATTRIBUTE=memberOf
+# Map the attribute to the name of a local role, defined as json array, ldap role is key, pilos role is value
+LDAP_ROLE_MAP='{"cn=staff,ou=groups,dc=university,dc=org":"staff","cn=students,ou=groups,dc=university,dc=org":"students"}'
 
 # Login logging
 AUTH_LOG_SUCCESSFUL=false
