Add local openldap for dev (#250)
* Add ldap service

* Adjust .env defaults

* Enforce loading ldap role attribute

* Change ldap role mapping syntax to json

* Update docs

--- a/.env.ci
+++ b/.env.ci
@@ -34,22 +34,22 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 # LDAP config
 LDAP_ENABLED=false
-LDAP_HOST=127.0.0.1
+LDAP_HOST=openldap
 # For anonymous bind keep LDAP_USERNAME and LDAP_PASSWORD empty
-LDAP_USERNAME="cn=user,dc=local,dc=om"
-LDAP_PASSWORD="secret"
+LDAP_USERNAME="cn=readonly,dc=university,dc=org"
+LDAP_PASSWORD="readonly"
 LDAP_PORT=389
-LDAP_BASE_DN="dc=local,dc=com"
+LDAP_BASE_DN="ou=people,dc=university,dc=org"
 LDAP_TIMEOUT=5
-LDAP_SSL=true
+LDAP_SSL=false
 LDAP_TLS=false
 # LDAP logging debugging only
 LDAP_LOGGING=false
 # LDAP role mapping, to disable keep LDAP_ROLE_ATTRIBUTE empty
 # Attribute with the users role, can be a multi value attribute
-LDAP_ROLE_ATTRIBUTE=userclass
-# Map the attribute to the name of a local role, defined as array, ldap role is key, pilos role is value
-LDAP_ROLE_MAP=A=admin,U=user
+LDAP_ROLE_ATTRIBUTE=memberOf
+# Map the attribute to the name of a local role, defined as json array, ldap role is key, pilos role is value
+LDAP_ROLE_MAP='{"cn=staff,ou=groups,dc=university,dc=org":"staff","cn=students,ou=groups,dc=university,dc=org":"students"}'
 
 # Login logging
 AUTH_LOG_SUCCESSFUL=false
