--- a/.env.ci
+++ b/.env.ci
@@ -24,12 +24,12 @@ QUEUE_CONNECTION=sync
 
 # Email config
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=admin@domain.tld
 MAIL_FROM_NAME="${APP_NAME}"
 
 # LDAP config
