--- a/docker/8.1/supervisord.conf
+++ b/docker/8.1/supervisord.conf
@@ -5,9 +5,16 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:php]
-command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80
-user=sail
-environment=LARAVEL_SAIL="1"
+command=php-fpm -D
+user=root
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:apache2]
+command=apache2ctl -DFOREGROUND
+user=root
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
