Fix database column inconsistencies (#242)
* Cleanup migrations and provide script for upgrade

* Adjust models, tests, controllers to new column names

* Update CI to use mysql DB

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,9 @@ jobs:
     - name: Migrate Database
       env:
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
+        DB_DATABASE: test
+        DB_USERNAME: root
+        DB_PASSWORD: password
       run: php artisan migrate --no-interaction -vvv
     - name: Execute code style check via php-cs-fixer
       run: vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes
@@ -72,9 +75,12 @@ jobs:
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
+        DB_DATABASE: test
+        DB_USERNAME: root
+        DB_PASSWORD: password
         TESTING_BBB: ${{ secrets.TESTING_BBB }}
       run: |
-        vendor/bin/paratest --coverage-clover=coverage.xml
+        php artisan test --parallel --coverage-clover=coverage.xml
         bash <(curl -s https://codecov.io/bash)
     - name: Upload coverage
       uses: codecov/codecov-action@v3
