Create production ready docker container

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -3,9 +3,7 @@ FROM php:8.1-fpm-bullseye
 LABEL maintainer="Samuel Weirich"
 LABEL description="Development container for PILOS, compatible with laravel sail; heavily inspired by offical image"
 
-ARG WWWGROUP
 ARG NODE_VERSION=16
-ARG POSTGRES_VERSION=14
 
 WORKDIR /var/www/html
 
@@ -15,13 +13,9 @@ ENV TZ=UTC
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
-    && apt-get install -y gnupg gosu curl ca-certificates zip unzip libzip-dev git supervisor libcap2-bin libpng-dev python2 \
+    && apt-get install -y gnupg gosu curl ca-certificates cron zip unzip libzip-dev git supervisor libcap2-bin libpng-dev python2 \
     && apt-get install -y apache2 libapache2-mod-xsendfile \
     && apt-get install -y libldap2-dev \
-    && mkdir -p ~/.gnupg \
-    && chmod 600 ~/.gnupg \
-    && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf \
-    && apt-get update \
     && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev  \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
     && docker-php-ext-install -j$(nproc) bcmath pdo_mysql ldap zip gd \
@@ -29,40 +23,51 @@ RUN apt-get update \
     && curl -sL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
     && apt-get install -y nodejs \
     && npm install -g npm \
-    && apt-get install -y sqlite3 default-mysql-client \
     && apt-get -y autoremove \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN groupadd --force -g $WWWGROUP sail
-RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
-
 # Enable PHP modules
-RUN a2enmod rewrite
-RUN a2enmod headers
-RUN a2enmod alias proxy proxy_fcgi
-
-# Set Apache user
-RUN sed -rie 's|export APACHE_RUN_USER=.*|export APACHE_RUN_USER=sail|g' /etc/apache2/envvars; \
-    sed -rie 's|export APACHE_RUN_GROUP=.*|export APACHE_RUN_GROUP=sail|g' /etc/apache2/envvars;
+RUN a2enmod rewrite headers alias proxy proxy_fcgi
 
 # Copy start script
-COPY start-container /usr/local/bin/start-container
-RUN chmod +x /usr/local/bin/start-container
+COPY ./docker/app/entrypoint /usr/local/bin/entrypoint
+COPY ./docker/app/wait-for-it /usr/local/bin/wait-for-it
+RUN chmod +x /usr/local/bin/entrypoint
+RUN chmod +x /usr/local/bin/wait-for-it
 
 # Copy supervisor config
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ./docker/app/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Copy apache default site conf
-COPY 000-default.conf /etc/apache2/sites-enabled/000-default.conf
+COPY ./docker/app/apache/000-default.conf /etc/apache2/sites-enabled/000-default.conf
 
 # Copy php config files
-COPY php/zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
-COPY php/php.ini /usr/local/etc/php/conf.d/99-app.ini
+COPY ./docker/app/php/zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
+COPY ./docker/app/php/php.ini /usr/local/etc/php/conf.d/99-app.ini
+
+# Copy cron file to the cron.d directory
+COPY ./docker/app/cron/schedule /etc/cron.d/schedule
+RUN chmod 0644 /etc/cron.d/schedule
+RUN crontab /etc/cron.d/schedule
+RUN touch /var/log/cron.log
 
 # Copy ldap config files
-COPY ldap/ /etc/ldap
+COPY ./docker/app/ldap/ /etc/ldap
+
+RUN mkdir /var/www/.npm
+RUN chown www-data:www-data /var/www/.npm
+
+COPY --chown=www-data:www-data ./ /var/www/html
+
+USER www-data
+
+RUN npm install
+RUN npm run production
+RUN composer install
+
+USER root
 
 EXPOSE 80
 
-ENTRYPOINT ["start-container"]
+ENTRYPOINT ["entrypoint"]
