--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -2,12 +2,12 @@
 daemonize = no
 
 [www]
-user = sail
-group = sail
+user = www-data
+group = www-data
 
 listen = /var/run/php8.1-fpm.sock
-listen.owner = sail
-listen.group = sail
+listen.owner = www-data
+listen.group = www-data
 listen.mode = 0660
 
 ; Choose how the process manager will control the number of child processes.
