--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=PILOS
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 # API Server URL
 APP_URL=http://localhost
 
@@ -13,11 +13,11 @@ LOG_CHANNEL=stack
 
 # Database config
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=app
+DB_USERNAME=user
+DB_PASSWORD=password
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
@@ -52,8 +52,8 @@ LDAP_ROLE_ATTRIBUTE=memberOf
 LDAP_ROLE_MAP='{"cn=staff,ou=groups,dc=university,dc=org":"staff","cn=students,ou=groups,dc=university,dc=org":"students"}'
 
 # Login logging
-AUTH_LOG_SUCCESSFUL=false
-AUTH_LOG_FAILED=false
+AUTH_LOG_SUCCESSFUL=true
+AUTH_LOG_FAILED=true
 AUTH_LOG_LDAP_ROLES=false
 
 # Don't forget to rebuild frontend on changing any environment variables starting with MIX_
@@ -125,7 +125,6 @@ ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
 # Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
 GREENLIGHT_COMPATIBILITY=false
 GREENLIGHT_PATH=b
-
 
 # Development
 # Enable axe accessibility check tools
