--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
         build:
             context: ./
             dockerfile: docker/app/Dockerfile
-        image: pilos/pilos:v2
+        image: ghcr.io/thm-health/pilos:latest
         ports:
-          - '${APP_PORT:-80}:80'
+          - '127.0.0.1:5000:80'
         env_file:
           - .env
         volumes:
