--- a/.env.ci
+++ b/.env.ci
@@ -80,6 +80,12 @@ ROOM_NAME_LIMIT=50
 ROOM_REFRESH_RATE=5
 # Default logo of the application
 DEFAULT_LOGO=/images/logo.svg
+# Custom help page url
+HELP_URL=
+# Custom legal notice url
+LEGAL_NOTICE_URL=
+# Custom privacy policy url
+PRIVACY_POLICY_URL=
 # Default favicon of the application
 DEFAULT_FAVICON=/images/favicon.ico
 # Global room limit
