Run schedule via supervisord not cron

--- a/docker/app/supervisord.conf
+++ b/docker/app/supervisord.conf
@@ -27,6 +27,10 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:schedule]
+command=schedule
+user=www-data
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
