--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@
 version: '3'
 services:
     app:
-        build:
-            context: ./
-            dockerfile: docker/app/Dockerfile
-        image: ghcr.io/thm-health/pilos:latest
+        image: pilos/pilos:latest
         ports:
           - '127.0.0.1:5000:80'
         env_file:
