--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,3 +29,39 @@ services:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
         retries: 3
         timeout: 5s
+    mailhog:
+      image: 'mailhog/mailhog:latest'
+      ports:
+        - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+        - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+    phpmyadmin:
+      image: phpmyadmin/phpmyadmin
+      links:
+        - db:db
+      ports:
+        - '${FORWARD_PHPMYADMIN_PORT:-8080}:80'
+      environment:
+        MYSQL_USERNAME: "${DB_USERNAME}"
+        MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+        PMA_HOST: db
+        PMA_USER: "${DB_USERNAME}"
+        PMA_PASSWORD: "${DB_PASSWORD}"
+    openldap:
+      image: osixia/openldap
+      environment:
+        LDAP_ORGANISATION: "Demo University"
+        LDAP_DOMAIN: "university.org"
+        LDAP_READONLY_USER: 'true'
+      volumes:
+        - './docker/openldap:/container/service/slapd/assets/config/bootstrap/ldif/custom'
+      command: --copy-service
+    phpldapadmin:
+      image: osixia/phpldapadmin
+      links:
+        - openldap:ldap-host
+      ports:
+        - '${FORWARD_PHPLDAPADMIN_PORT:-6680}:80'
+      environment:
+        PHPLDAPADMIN_LDAP_HOSTS: "#PYTHON2BASH:[{'ldap-host': [{'server': []},{'login': [{'bind_id': 'cn=admin,dc=university,dc=org', 'bind_pass': 'admin'}]}]}]"
+        PHPLDAPADMIN_HTTPS: 'false'
+
