--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -33,11 +33,14 @@ jobs:
         uses: docker/metadata-action@v4.0.1
         with:
           images: pilos/pilos
+          flavor: |
+            latest=auto
+            prefix=
+            suffix=
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=branch
 
       - name: Build and push Docker image
