--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -41,7 +41,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=ref,event=branch
+            type=ref,event=branch,suffix=-dev
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.1.1
