--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -5,8 +5,11 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:php]
-command=php-fpm -D
+command=/usr/local/sbin/php-fpm --nodaemonize
 user=root
+autostart=true
+autorestart=true
+priority=5
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -15,6 +18,11 @@ stderr_logfile_maxbytes=0
 [program:apache2]
 command=apache2ctl -DFOREGROUND
 user=root
+autostart=true
+autorestart=true
+priority=10
+startretries=1
+startsecs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
