--- a/docker/app/apache/000-default.conf
+++ b/docker/app/apache/000-default.conf
@@ -2,6 +2,8 @@
 
 	DocumentRoot /var/www/html/public
 
+	Include /var/www/html/apache/*.conf
+
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
