--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jest": "^26.5.3",
+        "eslint-plugin-jsonc": "^2.5.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
         "eslint-plugin-standard": "^4.1.0",
@@ -61,6 +62,7 @@
         "awesome-mask": "^1.1.1",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.4",
+        "ua-parser-js": "^1.0.2",
         "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
         "vue-cropperjs": "^4.2.0",
