--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "prod": "npm run production",
-        "production": "mix --production",
+        "dev": "vite --host",
+        "build": "vite build",
         "test": "jest",
         "lint": "eslint --ext .js,.vue,.json .",
         "fix-cs": "eslint --ext .js,.vue,.json . --fix",
@@ -17,6 +13,7 @@
         "@babel/eslint-parser": "^7.16.5",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+        "@vitejs/plugin-vue2": "^2.0.1",
         "@vue/test-utils": "^1.3.0",
         "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
@@ -42,7 +39,7 @@
         "jest-transform-stub": "^2.0.0",
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
-        "laravel-mix": "^6.0.41",
+        "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
@@ -50,10 +47,10 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.0",
         "sass-loader": "^8.0.0",
-        "vue": "^2.6.14",
+        "vite": "^3.2.4",
+        "vue": "^2.7.14",
         "vue-axe": "^2.4.4",
         "vue-loader": "^15.9.7",
-        "vue-template-compiler": "^2.6.14",
         "webpack": "^5.68.0"
     },
     "dependencies": {
