--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
-        "test": "jest",
         "lint": "eslint --ext .js,.vue,.json .",
         "fix-cs": "eslint --ext .js,.vue,.json . --fix",
-        "cover": "jest --coverage"
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.16.10",
@@ -14,6 +14,7 @@
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
         "@vitejs/plugin-vue2": "^2.0.1",
+        "@vitest/ui": "^0.25.3",
         "@vue/test-utils": "^1.3.0",
         "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
@@ -34,11 +35,10 @@
         "eslint-plugin-standard": "^4.1.0",
         "eslint-plugin-vue": "^7.0.0",
         "glob": "^7.2.0",
+        "happy-dom": "^7.7.0",
         "jest": "^28.1.2",
         "jest-config": "^28.1.2",
         "jest-transform-stub": "^2.0.0",
-        "jsdom": "^16.2.2",
-        "jsdom-global": "^3.0.2",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "moxios": "^0.4.0",
@@ -48,9 +48,11 @@
         "sass": "^1.49.0",
         "sass-loader": "^8.0.0",
         "vite": "^3.2.4",
+        "vitest": "^0.25.3",
         "vue": "^2.7.14",
         "vue-axe": "^2.4.4",
         "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.7.14",
         "webpack": "^5.68.0"
     },
     "dependencies": {
