--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
         "chart.js": "^2.9.4",
         "pinia": "^2.0.27",
         "ua-parser-js": "^1.0.2",
-        "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
+        "vue-clipboard2": "^0.3.3",
         "vue-cropperjs": "^4.2.0",
         "vue-frag": "^1.4.0",
         "vue-i18n": "^8.26.8",
