--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,6 +26,7 @@ services:
         MYSQL_PASSWORD: '${DB_PASSWORD}'
         MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       volumes:
+        - 'mariadb:/var/lib/mysql'
         - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
       healthcheck:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
@@ -66,4 +67,6 @@ services:
       environment:
         PHPLDAPADMIN_LDAP_HOSTS: "#PYTHON2BASH:[{'ldap-host': [{'server': []},{'login': [{'bind_id': 'cn=admin,dc=university,dc=org', 'bind_pass': 'admin'}]}]}]"
         PHPLDAPADMIN_HTTPS: 'false'
-
+volumes:
+  mariadb:
+    driver: local
