--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "@babel/eslint-parser": "^7.16.5",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
-        "@vitejs/plugin-vue2": "^2.0.1",
+        "@vitejs/plugin-vue2": "^2.1.0",
+        "@vitest/coverage-istanbul": "^0.25.3",
         "@vitest/ui": "^0.25.3",
         "@vue/test-utils": "^1.3.0",
         "@vue/vue2-jest": "^28.0.1",
