--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@babel/eslint-parser": "^7.16.5",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+        "@pinia/testing": "^0.0.14",
         "@vue/test-utils": "^1.3.0",
         "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
