--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
         "@babel/eslint-parser": "^7.16.5",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+        "@pinia/testing": "^0.0.14",
         "@vitejs/plugin-vue2": "^2.1.0",
         "@vitest/coverage-istanbul": "^0.25.3",
         "@vitest/ui": "^0.25.3",
-        "@pinia/testing": "^0.0.14",
         "@vue/test-utils": "^1.3.0",
-        "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
         "axios": "^0.21.2",
         "babel-core": "^7.0.0-bridge.0",
@@ -29,7 +28,6 @@
         "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jest": "^26.5.3",
         "eslint-plugin-jsonc": "^2.5.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
@@ -37,9 +35,6 @@
         "eslint-plugin-vue": "^7.0.0",
         "glob": "^7.2.0",
         "happy-dom": "^7.7.0",
-        "jest": "^28.1.2",
-        "jest-config": "^28.1.2",
-        "jest-transform-stub": "^2.0.0",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "moxios": "^0.4.0",
@@ -53,8 +48,7 @@
         "vue": "^2.7.14",
         "vue-axe": "^2.4.4",
         "vue-loader": "^15.9.7",
-        "vue-template-compiler": "^2.7.14",
-        "webpack": "^5.68.0"
+        "vue-template-compiler": "^2.7.14"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.2",
