Enable local ssl support

--- a/.env.example
+++ b/.env.example
@@ -56,21 +56,21 @@ AUTH_LOG_SUCCESSFUL=true
 AUTH_LOG_FAILED=true
 AUTH_LOG_LDAP_ROLES=false
 
-# Don't forget to rebuild frontend on changing any environment variables starting with MIX_
+# Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 # Available languages for the language picker
-MIX_AVAILABLE_LOCALES=en,de
+VITE_AVAILABLE_LOCALES=en,de
 # Default language
-MIX_DEFAULT_LOCALE=en
+VITE_DEFAULT_LOCALE=en
 # Theme (resources/sass/theme/)
-MIX_THEME=default
+VITE_THEME=default
 # Color of the room history chart
-MIX_HISTORY_PARTICIPANT_COLOR='#c0392b'
-MIX_HISTORY_VOICES_COLOR='#2980b9'
-MIX_HISTORY_VIDEOS_COLOR='#27ae60'
+VITE_HISTORY_PARTICIPANT_COLOR='#c0392b'
+VITE_HISTORY_VOICES_COLOR='#2980b9'
+VITE_HISTORY_VIDEOS_COLOR='#27ae60'
 # Colors for color pickers (room type and application banner)
-MIX_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-MIX_BANNER_BACKGROUND_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-MIX_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
+VITE_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
+VITE_BANNER_BACKGROUND_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
+VITE_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
 # Maximum length of the room welcome message
 WELCOME_MESSAGE_LIMIT=500
 # Maximum length of the room name
@@ -135,5 +135,12 @@ GREENLIGHT_PATH=b
 # Development
 # Enable axe accessibility check tools
 ENABLE_AXE=false
-# Browsersync url
-BROWSERSYNC_URL=localhost
+
+# Use a custom ssl certificate for vite dev server
+VITE_SSL=false
+VITE_SSL_KEY=ssl/privkey.pem
+VITE_SSL_CERT=ssl/fullchain.pem
+
+# Domain for the vite dev server, should match ssl certificate
+VITE_HOST=localhost
+
