--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,12 +8,14 @@ services:
         image: pilos/pilos:latest
         ports:
           - '${APP_PORT:-80}:80'
+          - '${APP_SSL_PORT:-443}:443'
           - '5173:5173'
           - '51204:51204'
         environment:
           ENABLE_XDEBUG: '${ENABLE_XDEBUG:-no}'
         volumes:
           - './:/var/www/html/'
+          - './ssl:/local/certs/'
         depends_on:
           - db
     db:
