--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,7 +5,9 @@ services:
         build:
             context: ./
             dockerfile: docker/app/Dockerfile
-        image: pilos/pilos:latest
+            args:
+              WWWGROUP: '${WWWGROUP}'
+              WWWUSER: '${WWWUSER}'
         ports:
           - '${APP_PORT:-80}:80'
           - '${APP_SSL_PORT:-443}:443'
