--- a/.env.ci
+++ b/.env.ci
@@ -132,9 +132,20 @@ ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
 GREENLIGHT_COMPATIBILITY=false
 GREENLIGHT_PATH=b
 
-
 # Development
 # Enable axe accessibility check tools
 ENABLE_AXE=false
-# Browsersync url
-BROWSERSYNC_URL=localhost
+
+# Use a custom ssl certificate for vite dev server
+VITE_SSL=false
+VITE_SSL_KEY=ssl/privkey.pem
+VITE_SSL_CERT=ssl/fullchain.pem
+
+# Domain for the vite dev server, should match ssl certificate
+VITE_HOST=localhost
+
+# User ID and Group ID of the www-data user inside the container
+# This is needed to avoid permission issues when mounting volumes in development
+# Only takes effect when building the container (sail build)
+WWWGROUP=1000
+WWWUSER=1000
