--- a/.env.example
+++ b/.env.example
@@ -144,3 +144,8 @@ VITE_SSL_CERT=ssl/fullchain.pem
 # Domain for the vite dev server, should match ssl certificate
 VITE_HOST=localhost
 
+# User ID and Group ID of the www-data user inside the container
+# This is needed to avoid permission issues when mounting volumes in development
+# Only takes effect when building the container (sail build)
+WWWGROUP=1000
+WWWUSER=1000
