--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "vitest run",
         "test:watch": "vitest watch",
         "test:ui": "vitest --ui",
-        "coverage": "vitest run --coverage"
+        "cover": "vitest run --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.16.10",
