--- a/.env.example
+++ b/.env.example
@@ -134,7 +134,7 @@ GREENLIGHT_PATH=b
 
 # Development
 # Enable axe accessibility check tools
-ENABLE_AXE=false
+VITE_ENABLE_AXE=false
 
 # Use a custom ssl certificate for vite dev server
 VITE_SSL=false
