--- a/.env.example
+++ b/.env.example
@@ -141,8 +141,12 @@ VITE_SSL=false
 VITE_SSL_KEY=ssl/privkey.pem
 VITE_SSL_CERT=ssl/fullchain.pem
 
-# Domain for the vite dev server, should match ssl certificate
+# Domain and port for the vite dev server, should match ssl certificate
 VITE_HOST=localhost
+VITE_PORT=5173
+
+# Port for VITEST WebUI
+VITEST_UI_PORT=5174
 
 # User ID and Group ID of the www-data user inside the container
 # This is needed to avoid permission issues when mounting volumes in development
