--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -11,8 +11,8 @@ services:
         ports:
           - '${APP_PORT:-80}:80'
           - '${APP_SSL_PORT:-443}:443'
-          - '5173:5173'
-          - '51204:51204'
+          - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+          - '${VITEST_UI_PORT:-5174}:${VITEST_UI_PORT:-5174}'
         environment:
           ENABLE_XDEBUG: '${ENABLE_XDEBUG:-no}'
         volumes:
