--- a/.env.example
+++ b/.env.example
@@ -136,10 +136,8 @@ GREENLIGHT_PATH=b
 # Enable axe accessibility check tools
 VITE_ENABLE_AXE=false
 
-# Use a custom ssl certificate for vite dev server
+# Use ssl for development
 VITE_SSL=false
-VITE_SSL_KEY=ssl/privkey.pem
-VITE_SSL_CERT=ssl/fullchain.pem
 
 # Domain and port for the vite dev server, should match ssl certificate
 VITE_HOST=localhost
