Add support for trusted proxies

--- a/.env.ci
+++ b/.env.ci
@@ -132,6 +132,11 @@ ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
 GREENLIGHT_COMPATIBILITY=false
 GREENLIGHT_PATH=b
 
+# Trusted proxies for reverse proxy setups
+# You can use "*" to trust all proxies that connect directly to the server
+# or you can use a comma separated list of trusted proxies, also with support for CIDR notation e.g. "192.0.0.1,10.0.0.0/8"
+TRUSTED_PROXIES=
+
 # Development
 # Enable axe accessibility check tools
 VITE_ENABLE_AXE=false
