--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
           - '127.0.0.1:5000:80'
         env_file:
           - .env
+        environment:
+          TRUSTED_PROXIES: "*"
         volumes:
           - './storage/logs:/var/www/html/storage/logs'
           - './storage/app:/var/www/html/storage/app'
