--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -27,3 +27,13 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:schedule]
+command=/usr/local/etc/scheduler/run.sh
+user=www-data
+autostart=true
+startsecs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
